# ashare-research

./: .gitignore  README.md  dashboard.py  findings.md  governance.md  progress.md  pyproject.toml  task_plan.md
configs/: backtest.yaml  baostock.yaml  relative_strength.yaml  symbol_analysis.yaml
notebooks/: README.md
scripts/: create_sample_data.py  download_baostock_data.py  download_guidebee_data.py
src/ashare_research/: __init__.py  cli.py  config.py
src/ashare_research/analysis/: __init__.py  attribution.py  metrics.py  reports.py  technical.py
src/ashare_research/backtest/: __init__.py  accounting.py  engine.py  schedule.py
src/ashare_research/contracts/: __init__.py  schemas.py  validation.py
src/ashare_research/data/: adjustments.py  baostock.py  benchmarks.py  calendar.py  daily_bars.py  guidebee.py  manifest.py  universe.py
src/ashare_research/experiments/: __init__.py  sweep.py
src/ashare_research/factors/: __init__.py  technical.py
src/ashare_research/pipeline/: __init__.py  run.py
src/ashare_research/risk/: __init__.py  position_sizing.py  tradeability.py
src/ashare_research/strategies/: __init__.py  moving_average.py  registry.py  relative_strength.py
tests/: test_adjustments.py  test_backtest_smoke.py  test_baostock_download.py  test_calendar_universe.py  test_config.py  test_contracts.py  test_experiments.py  test_guidebee_data.py  test_pipeline.py  test_source_validation.py  test_technical_analysis.py  test_tradeability.py
