[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ashare-research"
version = "0.1.0"
description = "Research-first A-share daily quantitative strategy scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
dashboard = [
  "streamlit>=1.36",
]
notebook = [
  "ipykernel>=6.0",
  "matplotlib>=3.9",
  "plotly>=5.22",
]

[project.scripts]
ashare-run-backtest = "ashare_research.cli:run_backtest"

[tool.hatch.build.targets.wheel]
packages = ["src/ashare_research"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
